# shopware-changelog-parser

./: .gitignore  .release-state__BAK  CONVENTIONS-PYTHON.md  README.md  cli.py  pyproject.toml  releases.json
docs/: index.md  slack_notifier.md
src/: changelog.py  cli.py  formatters.py  frontmatter.py  github-releases-fetcher.py  markdown_generator.py  models.py  printer.py  release-parser.py  release_notifier.py  shopware_changelog.py
